log_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-app-svc
spec:
  type: ClusterIP
  selector:
    app: log-app
  ports:
    - name: log-server
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: pingpong
      port: 2346
      protocol: TCP
      targetPort: 3001
